--- a/software/TinyOLEDdemo_t10_text/makefile
+++ b/software/TinyOLEDdemo_t10_text/makefile
@@ -10,14 +10,18 @@
 DEVICE  = attiny10
 CLOCK   = 8000000
 PROGRMR = usbasp
-BYTE0   = 0xff
+FUSE    = 0xff
 
 # Objects
 OBJECTS = main.o
 
 # Commands
+CC       = avr-gcc
+OBJCOPY  = avr-objcopy
+OBJDUMP  = avr-objdump
+AVRSIZE  = avr-size
 AVRDUDE = avrdude -c $(PROGRMR) -p $(DEVICE)
-COMPILE = avr-gcc -Wall -Os -flto -mmcu=$(DEVICE) -DF_CPU=$(CLOCK) -DDEBUG_LEVEL=0
+COMPILE = $(CC) -Wall -Os -flto -mmcu=$(DEVICE) -DF_CPU=$(CLOCK) -DDEBUG_LEVEL=0
 CLEAN   = rm -f main.lst main.obj main.cof main.list main.map main.eep.hex *.o main.s
 
 # Symbolic Targets
@@ -33,21 +37,25 @@ help:
 	@echo "make install   compile, upload and burn fuses for $(DEVICE)"
 	@echo "make clean     remove all build files"
 
-bin:	$(OBJECTS)
-	@echo "Building main.bin ..."
-	@$(COMPILE) -o main.bin $(OBJECTS)
+elf:	$(OBJECTS)
+	@echo "Building main.elf ..."
+	@$(COMPILE) -o main.elf $(OBJECTS)
 	@echo "Removing temporary files ..."
 	@$(CLEAN)
 
-hex:	bin
-	@echo "Building main.hex ..."
-	@avr-objcopy -j .text -j .data -O ihex main.bin main.hex
-	@echo "FLASH: $(shell avr-size -d main.bin | awk '/[0-9]/ {print $$1 + $$2}') bytes"
-	@echo "SRAM:  $(shell avr-size -d main.bin | awk '/[0-9]/ {print $$2 + $$3}') bytes"
+bin:	elf size
+	@echo "Building main.bin ..."
+	@$(OBJCOPY) -O binary -R .eeprom main.elf main.bin
+	@echo "Removing temporary files ..."
+	@$(CLEAN)
 
-asm:	bin
+hex:	elf size
+	@echo "Building main.hex ..."
+	@$(OBJCOPY) -j .text -j .data -O ihex main.elf main.hex
+
+asm:	elf size
 	@echo "Disassembling to main.asm ..."
-	@avr-objdump -d main.bin > main.asm
+	@$(OBJDUMP) -d main.elf > main.asm
 
 upload:	hex
 	@echo "Uploading to $(DEVICE) ..."
@@ -55,14 +63,22 @@ upload:	hex
 
 fuses:
 	@echo "Burning fuses of $(DEVICE) ..."
-	@$(AVRDUDE) -U BYTE0:w:$(BYTE0):m
+	@$(AVRDUDE) -U fuse:w:$(FUSE):m
 
 install: upload fuses
+
+flash: upload fuses
+
+size:
+	@echo "------------------"
+	@echo "FLASH: $(shell $(AVRSIZE) -d main.elf | awk '/[0-9]/ {print $$1 + $$2}') bytes"
+	@echo "SRAM:  $(shell $(AVRSIZE) -d main.elf | awk '/[0-9]/ {print $$2 + $$3}') bytes"
+	@echo "------------------"
 
 clean:
 	@echo "Cleaning all up ..."
 	@$(CLEAN)
-	@rm -f main.bin main.hex main.asm
+	@rm -f main.bin main.hex main.asm main.elf
 
 .c.o:
 	@echo "Compiling $< for $(DEVICE) @ $(CLOCK)Hz ..."
